syntax = "proto3";

package saladineye;

option go_package = "./common/genproto";

message FileInfo {
  string file_name = 1;
  string download_url = 2;
}